fixed featured in on mobile + added proper links to footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -555,7 +555,7 @@
     padding-top: 0;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:992px) {
     .featured-outlets {
         padding-top: 40px;
         height: 188px;
